[package]
name = "rust-api"
version = "0.1.0"
authors = ["Edward Andrews-Hodgson <edward@aldreth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.14.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool"]
